--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -17,7 +17,7 @@
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <!-- Music -->
     <!-- Prompt text to display when the user hasn't picked any songs to play yet. [CHAR LIMIT=57]-->
-    <string name="nothing_to_play">To play something, open the menu at the top left.</string>
+    <string name="nothing_to_play">To play something, choose source device.</string>
     <!-- Prompt text to display when we failed to connect to a media app. [CHAR LIMIT=50]-->
     <string name="cannot_connect_to_app"><xliff:g name="app">%s</xliff:g> doesn\'t seem to be working right now.</string>
     <!-- Prompt text to display when connecting to a media app. [CHAR LIMIT=50] -->
