--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -26,4 +26,5 @@
     <!-- The text for unknown playback error. [CHAR LIMIT=50] -->
     <string name="unknown_error">Something went wrong</string>
     <string name="unknown_string">Something went wrong</string>
+    <string name="unknown_string_1">Something went wrong</string>
 </resources>
