--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -28,4 +28,6 @@
     <string name="unknown_string">Something went wrong</string>
     <string name="unknown_string_1">Something went wrong</string>
     <string name="playlist_saved">Playlist saved</string>
+
+    <string name="default_media_application" translatable="false">android.car.media.localmediaplayer</string>
  </resources>
